<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/bluegrey900"
              android:padding="32dp"
              android:gravity="center"
              tools:context=".RegisterPage">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/logoperpus"
            android:contentDescription="@string/logo_perpus" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:padding="24dp"
          app:cardCornerRadius="20dp">

          <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:gravity="center"
              android:layout_gravity="center">

              <EditText
                  android:id="@+id/EditTextUsername"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/username"
                  android:paddingTop="20dp"
                  android:textColorHint="@android:color/darker_gray"
                  android:inputType="text"
                  android:autofillHints="username" />

              <EditText
                  android:id="@+id/EditTextPassword"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/password"
                  android:textColorHint="@android:color/darker_gray"
                  android:inputType="textPassword"
                  android:layout_marginTop="16dp"
                  android:autofillHints="password"/>

              <EditText
                  android:id="@+id/EditTextConPassword"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/confirm_password"
                  android:textColorHint="@android:color/darker_gray"
                  android:inputType="textPassword"
                  android:layout_marginTop="16dp"
                  android:autofillHints="confirm_password"/>

              <EditText
                  android:id="@+id/EditTextPhoneNumber"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/phone_number"
                  android:textColorHint="@android:color/darker_gray"
                  android:inputType="phone"
                  android:layout_marginTop="16dp"
                  android:autofillHints="phone_number" />

              <Button
                  android:gravity="center"
                  android:id="@+id/ButtonRegister"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/register"
                  android:textColor="@android:color/white"
                  android:textAllCaps="false"
                  android:backgroundTint="@color/bluegrey900"/>

              <TextView
                  android:id="@+id/TextViewLoginText"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/redirect_login"
                  android:textColor="@android:color/black"
                  android:textSize="14sp"
                  android:gravity="center"
                  android:layout_marginBottom="10dp"/>

              </LinearLayout>
        </androidx.cardview.widget.CardView>

</LinearLayout>
