<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              android:background="@color/bluegrey900"
              tools:context=".AboutUsPage">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/profile"
        android:layout_marginBottom="16dp"
        android:transitionName="profileImageTransition"
        android:contentDescription="@string/aboutuslogo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_us"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"
        android:transitionName="titleTransition" />

    <TextView
        android:gravity="center"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="We are a team of passionate developers dedicated to creating amazing apps."
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:transitionName="descriptionTransition" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact_us"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:transitionName="buttonTransition" />

</LinearLayout>